apps/docs/versioned_docs/version-0.11/intro.mdx
---
id: intro
slug: /
title: Introduction
sidebar_position: 1
---

# swatchbook

A Storybook addon and MDX blocks for **documenting [DTCG design tokens](https://design-tokens.org/tr/2025/drafts/)**.

Two things in one:

- **Doc blocks.** `TokenNavigator`, `TokenTable`, `ColorPalette`, `TypographyScale`, `TokenDetail`, and a handful of type-specific previews. Drop them into MDX pages and your token reference writes itself.
- **A multi-axis theme switcher.** Flip dark mode, brand, contrast, density — whatever dimensions your design system has — from one toolbar button. Each dimension is a DTCG resolver modifier; each becomes a dropdown in a single popover. Tokens repaint live as readers flip axes. See [**why axes, not themes**](./concepts/axes-vs-themes) for the shape.

:::tip[Try it right here]
The yinyang icon in the top-right of this page drives the same switcher against this docs site's own DTCG tokens — flip **mode**, **a11y**, or **typeface** to see the concept in action on the page you're reading.
:::

## Who it's for

Design-system authors who already have DTCG tokens (or are authoring them) — especially systems with more than one independent dimension (brand × mode, contrast × mode, density, and so on) — and want a browsable, interactive reference without building a custom docs site.

If your system has exactly one dimension and no plans for more, [`@storybook/addon-themes`](https://storybook.js.org/addons/@storybook/addon-themes)' single-string-ID model is simpler and probably a better fit.

## What it's not

Swatchbook isn't a runtime theme-switcher for production apps, a CSS-variable framework, or a component styling system. It emits CSS variables and `data-<prefix>-*` attributes on `<html>` inside the Storybook preview so tokens repaint when an author toggles an axis. For production theme switching, use your framework's theming tools or call `@unpunnyfuns/swatchbook-core`'s `emitCss` at build time and wire it up yourself — the emitted CSS is the same shape either way. For how your stories react to toolbar flips, see [theme reactivity](./concepts/theme-reactivity).

## What the addon gives you

- **No external compile step** — tokens reach the blocks through a Vite virtual module the addon publishes, not a prebuild script. No generated CSS files to check in, no config drift. Edit a token and the preview repaints. DTCG parsing is powered by [Terrazzo](https://terrazzo.app/) under the hood; see [the token pipeline](./concepts/token-pipeline) for the full mechanism.
- **One install, full surface** — `@unpunnyfuns/swatchbook-addon` pulls in the toolbar, preview decorator, MDX doc blocks, `ThemeSwitcher`, `useToken()`, and the supporting core / blocks / switcher packages transitively. `import { TokenTable, ThemeSwitcher, useToken } from '@unpunnyfuns/swatchbook-addon'` works from any consumer file. Sub-packages stay independently installable for slice-only consumers (e.g. a Docusaurus site rendering just the switcher).
- **Doc blocks** — `TokenDetail`, `TokenTable`, `TokenNavigator`, `ColorPalette`, `TypographyScale`, `FontFamilySample`, `FontWeightScale`, `StrokeStyleSample`, `Diagnostics`, motion/shadow/border previews. Once the addon is wired up, *authoring pages with these blocks is the primary day-to-day swatchbook interaction*. See the [blocks reference](./reference/blocks), the [authoring guide](./guides/authoring-doc-stories), and the [token-dashboard template](./guides/token-dashboard) for a turnkey browsable tree + diagnostics + table composition.
- **Toolbar** — a single Swatchbook icon button opens a popover with preset pills, one dropdown per modifier axis (so a reader can browse tokens in every context), and a color-format picker (`hex` / `rgb` / `hsl` / `oklch` / `raw`) that controls how blocks display colors.
- **`useToken` hook** — typed lookups from component code, reactive to the active theme.

## For AI agents

The optional [`@unpunnyfuns/swatchbook-mcp`](./reference/mcp) package ships a stdio [Model Context Protocol](https://modelcontextprotocol.io/) server that exposes your token graph — paths, axes, alias chains, diagnostics, per-theme resolved values — to AI assistants like Claude Desktop or Claude Code. Point it at your `swatchbook.config.ts` (or a bare DTCG resolver) and an agent can introspect and reason about the system without spinning up Storybook. Twelve read-only tools; live-reloads on token edits.

## See it live

The [live Storybook](pathname:///storybook/) runs the addon against this repo's [`tokens-reference`](https://github.com/unpunnyfuns/swatchbook/tree/main/packages/tokens-reference) fixture — a multi-file DTCG token set organized per-`$type` (one file for each of `color`, `size`, `typography`, `motion`, `border`, `shadow`, `gradient`, `stroke`, `font`, `number`), with resolver-driven `mode × brand × contrast` axes. Every block, panel, and toolbar control is wired up against those tokens.

## How to read these docs

- **[Quickstart](./quickstart)** — install, configure, run.
- **Blocks** — the MDX doc blocks you'll spend most of your time with: the [reference](./reference/blocks) lists what's available and the [authoring guide](./guides/authoring-doc-stories) walks through composing them.
- **Concepts** — the mental model: [why axes, not themes](./concepts/axes-vs-themes), [theming inputs](./concepts/theming-inputs), [axes](./concepts/axes), [theme reactivity](./concepts/theme-reactivity), [presets](./concepts/presets), [diagnostics](./concepts/diagnostics).
- **Guides** — the [multi-axis walkthrough](./guides/multi-axis-walkthrough) covers one-time setup.
- **Reference** — API surface for the remaining packages (`addon`, `core`, `config`, `mcp`).
- **Developers** — contributing to swatchbook itself: [architecture](./developers/architecture) and [sharp corners](./developers/sharp-corners).

## What these docs assume

You're comfortable with Storybook (CSF, decorators, MDX docs). For DTCG itself, you've skimmed the [2025.10 spec](https://design-tokens.org/tr/2025/drafts/) or at least seen `$value` / `$type` / alias syntax before — we won't re-teach the spec here.
